# serializer version: 1
# name: test_algorithm_snapshot[in_out_degree-InOutDegreeBowTie][in_out_degree]
  list([
  ])
# ---
# name: test_algorithm_snapshot[recency_weighted-RecencyWeightedActivity][recency_weighted]
  list([
    dict({
      'access_count': 0,
      'canonical_id': '',
      'category': 'entity',
      'created_at': '<scrubbed>',
      'description': 'Embedded graph DB with Cypher and temporal properties',
      'et_source': '',
      'first_seen': '<scrubbed>',
      'frequency': 1,
      'id': 'kuzu',
      'last_accessed': '<scrubbed>',
      'last_seen': '<scrubbed>',
      'name': 'Kuzu',
      'namespace': '<scrubbed>',
      'source_quote': "look at Kuzu. It's embedded, Cypher-native, and supports temporal properties on edges",
      'status': '',
      't_created': '<scrubbed>',
      't_expired': '<scrubbed>',
      't_superseded_by': '<scrubbed>',
      't_valid_from': '<scrubbed>',
      't_valid_to': '<scrubbed>',
      'tags': '',
      'updated_at': '<scrubbed>',
      'vectors_pending': True,
    }),
    dict({
      'access_count': 0,
      'canonical_id': '',
      'category': 'decision',
      'created_at': '<scrubbed>',
      'description': 'Which backend for the knowledge graph layer',
      'et_source': '',
      'first_seen': '<scrubbed>',
      'frequency': 1,
      'id': 'kg_store_choice',
      'last_accessed': '<scrubbed>',
      'last_seen': '<scrubbed>',
      'name': 'KG store choice',
      'namespace': '<scrubbed>',
      'source_quote': 'Decision: going with Kuzu for the KG layer',
      'status': '',
      't_created': '<scrubbed>',
      't_expired': '<scrubbed>',
      't_superseded_by': '<scrubbed>',
      't_valid_from': '<scrubbed>',
      't_valid_to': '<scrubbed>',
      'tags': '',
      'updated_at': '<scrubbed>',
      'vectors_pending': True,
    }),
    dict({
      'access_count': 0,
      'canonical_id': '',
      'category': 'topic',
      'created_at': '<scrubbed>',
      'description': 'Graph with valid_time and transaction_time per edge',
      'et_source': '',
      'first_seen': '<scrubbed>',
      'frequency': 1,
      'id': 'bitemporal_kg',
      'last_accessed': '<scrubbed>',
      'last_seen': '<scrubbed>',
      'name': 'Bitemporal Knowledge Graph',
      'namespace': '<scrubbed>',
      'source_quote': 'I need a store for a bitemporal knowledge graph',
      'status': '',
      't_created': '<scrubbed>',
      't_expired': '<scrubbed>',
      't_superseded_by': '<scrubbed>',
      't_valid_from': '<scrubbed>',
      't_valid_to': '<scrubbed>',
      'tags': '',
      'updated_at': '<scrubbed>',
      'vectors_pending': True,
    }),
    dict({
      'access_count': 0,
      'canonical_id': '',
      'category': 'entity',
      'created_at': '<scrubbed>',
      'description': 'Row store considered and rejected as KG backend',
      'et_source': '',
      'first_seen': '<scrubbed>',
      'frequency': 1,
      'id': 'sqlite',
      'last_accessed': '<scrubbed>',
      'last_seen': '<scrubbed>',
      'name': 'SQLite',
      'namespace': '<scrubbed>',
      'source_quote': "SQLite with two timestamp columns would work, but I'm worried about query ergonomics",
      'status': '',
      't_created': '<scrubbed>',
      't_expired': '<scrubbed>',
      't_superseded_by': '<scrubbed>',
      't_valid_from': '<scrubbed>',
      't_valid_to': '<scrubbed>',
      'tags': '',
      'updated_at': '<scrubbed>',
      'vectors_pending': True,
    }),
    dict({
      'access_count': 0,
      'canonical_id': '',
      'category': 'entity',
      'created_at': '<scrubbed>',
      'description': 'Vector store for semantic retrieval',
      'et_source': '',
      'first_seen': '<scrubbed>',
      'frequency': 1,
      'id': 'chromadb',
      'last_accessed': '<scrubbed>',
      'last_seen': '<scrubbed>',
      'name': 'ChromaDB',
      'namespace': '<scrubbed>',
      'source_quote': "I'll keep ChromaDB for vector embeddings",
      'status': '',
      't_created': '<scrubbed>',
      't_expired': '<scrubbed>',
      't_superseded_by': '<scrubbed>',
      't_valid_from': '<scrubbed>',
      't_valid_to': '<scrubbed>',
      'tags': '',
      'updated_at': '<scrubbed>',
      'vectors_pending': True,
    }),
    dict({
      'access_count': 0,
      'canonical_id': '',
      'category': 'tension',
      'created_at': '<scrubbed>',
      'description': 'Deprecated SQLite store, migration guard in place',
      'et_source': '',
      'first_seen': '<scrubbed>',
      'frequency': 1,
      'id': 'concept_store_legacy',
      'last_accessed': '<scrubbed>',
      'last_seen': '<scrubbed>',
      'name': 'ConceptStore (legacy)',
      'namespace': '<scrubbed>',
      'source_quote': 'SQLite stays only for the legacy ConceptStore until migration is done',
      'status': '',
      't_created': '<scrubbed>',
      't_expired': '<scrubbed>',
      't_superseded_by': '<scrubbed>',
      't_valid_from': '<scrubbed>',
      't_valid_to': '<scrubbed>',
      'tags': '',
      'updated_at': '<scrubbed>',
      'vectors_pending': True,
    }),
    dict({
      'access_count': 0,
      'canonical_id': '',
      'category': 'entity',
      'created_at': '<scrubbed>',
      'description': 'Prior art for temporal KG split',
      'et_source': '',
      'first_seen': '<scrubbed>',
      'frequency': 1,
      'id': 'graphiti_zep',
      'last_accessed': '<scrubbed>',
      'last_seen': '<scrubbed>',
      'name': 'Graphiti / Zep',
      'namespace': '<scrubbed>',
      'source_quote': 'matches how Graphiti and most temporal KG systems structure things',
      'status': '',
      't_created': '<scrubbed>',
      't_expired': '<scrubbed>',
      't_superseded_by': '<scrubbed>',
      't_valid_from': '<scrubbed>',
      't_valid_to': '<scrubbed>',
      'tags': '',
      'updated_at': '<scrubbed>',
      'vectors_pending': True,
    }),
  ])
# ---
# name: test_algorithm_snapshot[sequence_matcher-SequenceMatcherResolution][sequence_matcher]
  None
# ---
# name: test_algorithm_snapshot[textual_similarity-TextualSimilarityLinkPrediction][textual_similarity]
  list([
  ])
# ---
# name: test_algorithm_snapshot[top_percentile-TopPercentileBridges][top_percentile]
  list([
  ])
# ---
# name: test_algorithm_snapshot[weighted_bfs-WeightedBFSActivation][weighted_bfs]
  list([
  ])
# ---
# name: test_physarum_compute_effective_weight_snapshot
  list([
    dict({
      'base_weight': 1.5,
      'effective_weight': 1.4189,
      'source': 'bitemporal_kg',
      'target': 'kuzu',
    }),
    dict({
      'base_weight': 1.5,
      'effective_weight': 1.4189,
      'source': 'chromadb',
      'target': 'kuzu',
    }),
    dict({
      'base_weight': 1.5,
      'effective_weight': 1.4189,
      'source': 'concept_store_legacy',
      'target': 'sqlite',
    }),
    dict({
      'base_weight': 1.0,
      'effective_weight': 0.9459,
      'source': 'graphiti_zep',
      'target': 'bitemporal_kg',
    }),
    dict({
      'base_weight': 1.0,
      'effective_weight': 0.9459,
      'source': 'kg_store_choice',
      'target': 'chromadb',
    }),
    dict({
      'base_weight': 3.0,
      'effective_weight': 2.8378,
      'source': 'kg_store_choice',
      'target': 'kuzu',
    }),
    dict({
      'base_weight': 2.5,
      'effective_weight': 2.3649,
      'source': 'kg_store_choice',
      'target': 'sqlite',
    }),
    dict({
      'base_weight': 2.0,
      'effective_weight': 1.8919,
      'source': 'kuzu',
      'target': 'bitemporal_kg',
    }),
  ])
# ---
